Headers alignment fixed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2144,7 +2144,7 @@ p {
 		text-align: center;
 	}
 	.hero-text h1 {
-		font-size: 120%;
+		font-size: 20px;
 	}
 	.gallery-grid {
 		grid-template-columns: repeat(2, 1fr);
